--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<h1>My Awesome Blog!</h1>
+
 <%= react_component('PostsList',
                     { initialPosts: @posts },
                     { prerender: params[:noprerender].nil? }) %>
